added earth and draggable objects

--- a/templates/home.html
+++ b/templates/home.html
@@ -3,10 +3,18 @@
   <body>
   {% extends "layout.html" %}
   {% block content %}
+    <img src="https://placehold.jp/ff0000/00ffff/150x150.png?text=1" id="img1">
     <div class="home">
       <h1>This is going to be our website</h1>
       <p1>This is a saved note</p1>
     </div>
+    <div id="mydiv">
+      <div id="mydivheader">Click here to move</div>
+        <p>Move</p>
+        <p>this</p>
+        <p>DIV</p>
+    </div>
+    <div class="earth"></div>
   {% endblock %}
   </body>
 </html>
