--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2,5 +2,22 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: #444;
+  color: #006400;
+}
+
+div.earth{
+  position: relative;
+  height: 300px;
+  width: 300px;
+  margin: 0.05em auto;
+  background: #888 url(https://i.pinimg.com/originals/ec/40/af/ec40af43459fdc620f6ad873a6ac46de.jpg) 0 0 repeat;
+  border-radius: 50%;
+  background-size: 630px;
+  animation: rotate 16s linear infinite;
+  transition: transform 200ms linear;
+  transform-style: preserve-3d;
+  border-style: solid;
+  box_shadow: inset 20px 0 80px 6px rgb(0,0,0);
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif
+  color: #FF0000;
 }
