--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,7 +2,10 @@
 <html>
 <head>
   <title>Flask app</title>
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}"     />
+  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/main.css') }}">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js" type="text/javascript"></script>
+  <script src="{{url_for('static', filename='script/main.js')}}"></script>
 </head>
 <body>
   <header>
