--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,11 +1,5 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: #006400;
-}
-
-div.earth{
+/*
+./div.earth{
   position: relative;
   height: 300px;
   width: 300px;
@@ -20,4 +14,64 @@ div.earth{
   box_shadow: inset 20px 0 80px 6px rgb(0,0,0);
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif
   color: #FF0000;
+  z-index: 1;
 }
+*/
+
+body {
+    background-color: #131316;
+    color: #ffffff;
+    font-family: 'Poppins', sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
+section {
+    display: grid;
+    place-items: center;
+    align-content: center;
+    min-height: 100vh;
+}
+
+.hidden {
+    opacity: 0;
+    filter: blur(5px);
+    transform: translateX(-100%);
+    transition: all 4s;
+}
+
+.show {
+    opacity: 1;
+    filter: blur(0);
+    transform: translateX(0);
+}
+
+.main-container {
+    height: 50%;
+    width: 80%;
+    margin: 0 auto;
+    background-color: #f0f0f0;
+    position: relative;
+    border: 2px solid #333;
+    overflow: hidden;
+}
+
+.draggable {
+    width: 50px;
+    height: 50px;
+    background-color: #3498db;
+    position: absolute;
+    cursor: move;
+    user-select: none; /* Disable text selection */
+    z-index: 5;
+}
+
+#boy{
+    z-index:5;
+}
+
+
+
+
+
+
