--- a/templates/home.html
+++ b/templates/home.html
@@ -1,20 +1,39 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Flask app</title>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/main.css') }}">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js" type="text/javascript"></script>
+    <script defer src="{{url_for('static', filename='script/main.js')}}"></script>
+  </head>
   <body>
-  {% extends "layout.html" %}
-  {% block content %}
-    <img src="https://placehold.jp/ff0000/00ffff/150x150.png?text=1" id="img1">
-    <div class="home">
-      <h1>This is going to be our website</h1>
-      <p1>This is a saved note</p1>
-    </div>
-    <div id="mydiv">
-      <div id="mydivheader">Click here to move</div>
-        <p>Move</p>
-        <p>this</p>
-        <p>DIV</p>
-    </div>
-    <div class="earth"></div>
-  {% endblock %}
+
+    <section class="hidden">
+      <div class="main-container">
+        <div class="home">
+          <h1>This is going to be our website</h1>
+          <p1>This is a saved note</p1>
+        </div>
+        <div class="earth"></div>
+        <div class="draggable">
+          <img src="https://st2.depositphotos.com/3369547/11439/v/950/depositphotos_114399660-stock-illustration-little-boy-icon-kid-design.jpg" id="boy" alt="girl">
+        </div>
+        <div class="draggable">
+          <img src="https://previews.123rf.com/images/yupiramos/yupiramos1709/yupiramos170900763/85036110-little-girl-icon.jpg" id="girl" alt="girl">
+        </div>
+        <div class="draggable"></div>
+      </div>
+    </section>
+
+    <section class="hidden">
+      <h1> This is my 2nd section</h1>
+      <p> I'm just writing stuff here to save a spot</p>
+    </section>
+
+    <section class="hidden">
+      <h1> This is my 3rd section</h1>
+      <p> I need this site to be finished by saturday, so I only have a couple of days</p>
+    </section>
   </body>
 </html>
