--- a/templates/home.html
+++ b/templates/home.html
@@ -26,6 +26,24 @@
       </div>
     </section>
 
+    <section>
+      <h1>Here are some pics</h1>
+      <div class="logos">
+        <div class="logo hidden">
+          <img src="{{url_for('static', filename='IMG_5200.jpg')}}" id="myPics" width="200" height="200"/>
+        </div>
+        <div class="logo hidden">
+          <img src="{{url_for('static', filename='IMG_5229.jpg')}}" id="myPics" width="200" height="200"/> 
+        </div>
+        <div class="logo hidden">
+          <img src="{{url_for('static', filename='IMG_5798.jpg')}}" id="myPics" width="200" height="200"/>
+        </div>
+        <div class="logo hidden">
+          <img src="{{url_for('static', filename='IMG_6052.JPG')}}" id="myPics" width="200" height="200"/>
+        </div>
+      </div>
+    </section>
+
     <section class="hidden">
       <h1> This is my 2nd section</h1>
       <p> I'm just writing stuff here to save a spot</p>
@@ -35,5 +53,6 @@
       <h1> This is my 3rd section</h1>
       <p> I need this site to be finished by saturday, so I only have a couple of days</p>
     </section>
+
   </body>
 </html>
