--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,4 +1,3 @@
-
 @keyframes makethisbig {
   0% {
     transform: translateY(250px);
@@ -101,7 +100,7 @@ section {
 }
 
 #myPics {
-    border-radius: 10px 100px / 120px;
+    border-radius: 30px;
 }
 
 .main-container {
@@ -114,7 +113,9 @@ section {
     overflow: hidden;
 }
 
-#circle1 {  
+#circle1 {
+  border-radius: 50%; 
+  position: absolute; 
   color: white;
   line-height: 100px;
   font-size: 12px;
@@ -125,6 +126,8 @@ section {
 }
 
 #circle2 {
+  border-radius: 50%;
+  position: absolute;
   height: 225px;
   width: 225px;
   background: cornflowerblue;
@@ -402,4 +405,435 @@ section {
   top: 5px;
   display: inline-block;
   cursor: pointer;
+}
+
+
+:root {
+  --color:lightgray;
+  --border-radius:10px;
+  --image:url('https://media.gettyimages.com/vectors/cute-cartoon-dachshunds-in-love-vector-id865392634?s=2048x2048');
+}
+
+#mypuzzle {
+  padding:0;
+  margin:0;
+  box-sizing:border-box;
+}
+
+#puz, #puzz {
+  position:absolute;
+  border-radius:var(--border-radius) 0 var(--border-radius) 0;    
+  user-select:none;
+}
+#puz {
+  width:300px;
+  height:300px;
+  position:absolute;
+  top:50%;
+  left:50%;
+  transform:translate(-50%,-50%);
+  border:3px dashed lightgray;
+  overflow:hidden;
+}
+#puzz {
+  left:0;
+  top:0;
+  border:0;
+}
+
+#puz i {
+  float:left;
+  width:100px;
+  height:100px;
+  outline:1px dashed lightgray;
+}
+
+#puzz i {
+  position:absolute;
+  width:100px;
+  height:100px;
+  background:var(--color);
+  background-image:var(--image);
+  background-size:300px 300px;
+  cursor:move;
+  box-shadow:0 0 10px rgba(0,0,0,.25);
+}
+
+.first {
+  border-top-left-radius:var(--border-radius);
+  background-position:left top !important;
+}
+.secon {
+  background-position:center top !important;
+}
+.third {
+/*   border-top-right-radius:var(--border-radius); */
+  background-position:right top !important;
+}
+.fourt {
+  background-position:left center !important;
+}
+.fifth {
+  background-position:center center !important;
+}
+.sixth {  
+  background-position:right center !important;
+}
+.seven {
+/*   border-bottom-left-radius:var(--border-radius); */
+  background-position:left bottom !important;
+}
+.eight {
+  background-position:center bottom !important;
+}
+.ninth {
+  border-bottom-right-radius:var(--border-radius);
+  background-position:right bottom !important;
+}
+
+.clicked {
+  box-shadow:0 0 0 4px gray !important;
+}
+
+.dropped {
+  background:var(--color);
+  background-image:var(--image);
+  background-size:300px 300px;
+}
+.done {
+  opacity:0;
+  pointer-events:none;
+}
+
+.allDone {
+  animation:allDone 1s linear forwards;
+  border:3px solid lightgray !important;
+}
+.allDone i {
+  outline:0 !important;
+}
+
+@keyframes allDone {
+  50% { transform:translate(-50%,-50%) scale(1.2); }
+}
+
+#clicks {
+  font-size:8px;
+  font-family:monospace;
+  position:absolute;
+  bottom:5px;
+  right:5px;
+}
+
+
+
+
+#myheart {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  background-color: black;
+}
+
+#image1 {
+  mix-blend-mode: multiply;
+  bottom: 0;
+  right: 0;
+  opacity: 1;
+}
+
+.container {
+  position: relative;
+}
+
+.draggable {
+  width: 150px;
+  height: 150px;
+  position: absolute;
+  user-drag: element;
+  user-select: none;
+}
+
+#heart {
+  font-size: 2em;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition: opacity 0.5s ease-in-out;
+}
+
+
+
+
+
+
+.cake {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-left: -50px;
+  margin-top: -50px;
+  width: 100px;
+  height: 100px;
+}
+/* ============================================== BASE
+*/
+.cake:after {
+  background: #ebe3e1;
+  border-radius: 100px;
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100px;
+  height: 2px;
+}
+/* ============================================== Candle
+*/
+.velas {
+  background: #ffffff;
+  border-radius: 100%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-left: -2.5px;
+  margin-top: -8.333333333333334px;
+  width: 5px;
+  height: 16.666666666666668px;
+}
+.velas:after,
+.velas:before {
+  background: rgba(255, 0, 0, 0.4);
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2.2222222222222223px;
+}
+.velas:after {
+  top: 25%;
+  left: 0;
+}
+.velas:before {
+  top: 45%;
+  left: 0;
+}
+/* ============================================== Fire
+*/
+.fuego {
+  border-radius: 100%;
+  box-shadow: 0 0 40px 10px rgba(248, 233, 209, 0.2);
+  position: absolute;
+  top: -12px;
+  left: 50%;
+  margin-left: -3.3333333333333335px;
+  width: 6.666666666666667px;
+  height: 12.5px;
+}
+.fuego:nth-child(1) {
+  -webkit-animation: fuego 2s infinite;
+}
+.fuego:nth-child(2) {
+  -webkit-animation: fuego 1.5s infinite;
+}
+.fuego:nth-child(3) {
+  -webkit-animation: fuego 1s infinite;
+}
+.fuego:nth-child(4) {
+  -webkit-animation: fuego 0.5s infinite;
+}
+.fuego:nth-child(5) {
+  -webkit-animation: fuego 0.2s infinite;
+}
+/* ============================================== Animation Fire
+*/
+@-webkit-keyframes fuego {
+  0% {
+    background: rgba(254, 248, 97, 0.5);
+    -webkit-transform: translateY(0) scale(1);
+  }
+  50% {
+    background: rgba(255, 50, 0, 0.1);
+    -webkit-transform: translateY(-20px) scale(0);
+  }
+  100% {
+    background: rgba(254, 248, 97, 0.5);
+    -webkit-transform: translateY(0) scale(1);
+  }
+}
+/* ============================================== Frosting
+*/
+.cobertura {
+  background: #ece7e3;
+  border-radius: 50px;
+  position: absolute;
+  top: 60%;
+  left: 50%;
+  margin-left: -27.77777777777778px;
+  margin-top: -5px;
+  width: 55.55555555555556px;
+  height: 12.5px;
+  z-index: 10;
+}
+.cobertura:after,
+.cobertura:before {
+  background: #ece7e3;
+  border-radius: 100px;
+  content: "";
+  position: absolute;
+  width: 5px;
+  height: 10px;
+}
+.cobertura:after {
+  top: 6.666666666666667px;
+  right: 14.285714285714286px;
+}
+.cobertura:before {
+  top: 10px;
+  right: 9.090909090909092px;
+}
+/* ============================================== BIZCOCHO
+*/
+.bizcocho {
+  background: #6d3826;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  margin-left: -25px;
+  width: 50px;
+  height: 33.333333333333336px;
+}
+.bizcocho:after,
+.bizcocho:before {
+  background: rgba(236, 231, 227, 0.6);
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 5px;
+}
+.bizcocho:after {
+  top: 30%;
+  left: 0;
+}
+.bizcocho:before {
+  top: 60%;
+  left: 0;
+}
+
+
+h2,
+.words {
+  font-family: sans-serif;
+  font-weight: 300;
+  font-style: italic;
+  text-align: center;
+  width: 100%;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -webkit-user-select: none;
+}
+h2 {
+  color: #6c5299;
+  font-size: 1em;
+  margin-top: 6.8em;
+}
+.words {
+  color: rgba(236, 231, 227, 0.6);
+  font-size: 0.8em;
+  line-height: 2em;
+}
+
+
+
+
+
+
+
+/*
+ background:#000 url(http://www.script-tutorials.com/demos/360/images/stars.png) repeat top center;
+*/
+
+#solarsystem {
+ mix-blend-mode: multiple;
+}
+.circle_thing {
+  height: 400px;
+  width: 400px;
+  border-radius: 50%;
+  border: 1px solid gray;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  margin: auto;
+}
+.earth {
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+  background: radial-gradient(circle at 100px 100px, blue, #418ccc);
+  animation: earth-rotate 5s linear infinite;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  margin: auto;
+}
+
+.sun {
+  display: block;
+  background: black;
+  border-radius: 50%;
+  height: 200px;
+  width: 200px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  margin: auto;
+  background: radial-gradient(circle at 100px 100px, yellow, #000);
+}
+
+.solar-system {
+  width: 1000px;
+  heigth: 1000px;
+}
+
+.moon {
+  height: 5px;
+  width: 5px;
+  border-radius: 50%;
+  background: radial-gradient(circle at 100px 100px, green, #fff);
+  animation: moon-rotate 2s linear infinite;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  margin: auto;
+}
+
+@keyframes earth-rotate {
+  from {
+    transform: rotate(0deg) translateX(200px) rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg) translateX(200px) rotate(-360deg);
+  }
+}
+
+@keyframes moon-rotate {
+  from {
+    transform: rotate(0deg) translateX(40px) rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg) translateX(40px) rotate(-360deg);
+  }
 }
